--- a/package.json
+++ b/package.json
@@ -1,17 +1,32 @@
 {
-  "name": "tree-js",
+  "name": "@dgreenheck/tree-js",
   "author": "Daniel Greenheck",
-  "version": "0.0.0",
+  "version": "0.2.0",
   "type": "module",
+  "main": "build/@dgreenheck-tree-js.umd.js",
+  "module": "build/@dgreenheck-tree-js.es.js",
+  "exports": {
+    ".": {
+      "import": "./build/@dgreenheck-tree-js.es.js",
+      "require": "./build/@dgreenheck-tree-js.umd.js"
+    }
+  },
+  "files": [
+    "build",
+    "demo",
+    "index.js"
+  ],
   "scripts": {
-    "dev": "vite --host 127.0.0.1",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build:demo": "vite build --config vite.demo.config.js",
+    "build:npm": "vite build --config vite.npm.config.js",
+    "demo": "npm run build:npm && vite --config vite.demo.config.js --host 127.0.0.1",
+    "preview": "vite preview --host 127.0.0.1"
   },
   "devDependencies": {
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-plugin-static-copy": "^1.0.5"
   },
-  "dependencies": {
-    "three": "^0.163.0"
+  "peerDependencies": {
+    "three": ">=0.155"
   }
 }
