Removed unused asyncs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,7 @@
     "declarationDir": "./build",
     "allowJs": true,
     "outDir": "./dist",
-    "sourceMap": true,
-    "moduleResolution": "Node",
-    "resolveJsonModule": true
+    "sourceMap": true
   },
   "include": [
     "src/**/*.js"
