--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   ],
   "scripts": {
     "build:demo": "vite build --config vite.demo.config.js",
-    "build:npm": "vite build --config vite.npm.config.js",
-    "build:watch": "vite build --config vite.npm.config.js --watch",
+    "build:lib": "vite build --config vite.lib.config.js",
+    "build:watch": "vite build --config vite.lib.config.js --watch",
     "demo": "vite --config vite.demo.config.js --host 127.0.0.1",
     "preview": "vite preview --host 127.0.0.1"
   },
