Add types, performance improvements

--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     }
   },
   "files": [
-    "src",
-    "index.js"
+    "src/lib"
   ],
+  "types": "./build/@dgreenheck/ez-tree.es.d.ts",
   "scripts": {
     "build:app": "vite build --config vite.app.config.js",
     "build:lib": "vite build --config vite.lib.config.js",
@@ -32,8 +32,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "three": "^0.167.x",
+    "@types/three": "^0.169.0",
     "prettier": "3.3.3",
+    "three": "^0.167.x",
     "vite": "^5.0.0",
     "vite-plugin-dts": "^3.9.1",
     "vite-plugin-static-copy": "^1.0.5"
