--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dgreenheck/ez-tree",
   "author": "Daniel Greenheck",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -12,18 +12,22 @@
     "url": "https://github.com/dgreenheck/ez-tree/issues"
   },
   "type": "module",
-  "main": "build/@dgreenheck/ez-tree.umd.js",
-  "module": "build/@dgreenheck/ez-tree.es.js",
+  "main": "build/ez-tree.umd.js",
+  "module": "build/ez-tree.es.js",
   "exports": {
     ".": {
-      "import": "./build/@dgreenheck/ez-tree.es.js",
-      "require": "./build/@dgreenheck/ez-tree.umd.js"
+      "import": "./build/ez-tree.es.js",
+      "require": "./build/ez-tree.umd.js"
     }
   },
   "files": [
-    "src/lib"
+    "build",
+    "src",
+    "LICENSE",
+    "package.json",
+    "README.md"
   ],
-  "types": "./build/@dgreenheck/ez-tree.es.d.ts",
+  "types": "./build/ez-tree.es.d.ts",
   "scripts": {
     "build:app": "vite build --config vite.app.config.js",
     "build:lib": "vite build --config vite.lib.config.js",
