--- a/package.json
+++ b/package.json
@@ -29,22 +29,22 @@
   ],
   "types": "./build/ez-tree.es.d.ts",
   "scripts": {
-    "build:app": "vite build --config vite.app.config.js",
-    "build:lib": "vite build --config vite.lib.config.js",
-    "build:watch": "vite build --config vite.lib.config.js --watch",
-    "app": "npm run build:lib && vite --config vite.app.config.js",
+    "build:app": "vite build --config vite.app.config.ts",
+    "build:lib": "vite build --config vite.lib.config.ts",
+    "build:watch": "vite build --config vite.lib.config.ts --watch",
+    "app": "npm run build:lib && vite --config vite.app.config.ts",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@types/three": "^0.169.0",
+    "@tweakpane/core": "^2.0.5",
+    "@types/node": "^24.10.1",
+    "@types/three": "^0.181.0",
     "prettier": "3.3.3",
-    "three": "^0.167.x",
-    "vite": "^5.0.0",
-    "vite-plugin-dts": "^3.9.1",
-    "vite-plugin-static-copy": "^1.0.5"
+    "three": "^0.181.2",
+    "vite": "npm:rolldown-vite@latest"
   },
   "peerDependencies": {
-    "three": ">=0.167"
+    "three": "^0.181.2"
   },
   "keywords": [
     "threejs",
@@ -54,6 +54,9 @@
     "tree"
   ],
   "dependencies": {
-    "tweakpane": "^4.0.4"
+    "tweakpane": "^4.0.5"
+  },
+  "overrides": {
+    "vite": "npm:rolldown-vite@latest"
   }
 }
